implemented optional category filter for get books endpoint
