# assets/api-documentation.yaml
@@ -16,6 +16,13 @@ paths:
       tags:
         - Books
       summary: Retrieve all books
+      parameters:
+        - in: query
+          name: category
+          schema:
+            type: string
+          required: false
+          description: Filter books by category
       responses:
         '200':
           description: ok
@@ -32,6 +39,8 @@ paths:
                     title:
                       type: string
                       example: The Book
+        '204':
+          description: no content with that category filter
         '500':
           description: server error
     post:
